fix: [Diego] Cancelar pedido de admin agora retornando estoque
